Fix input text box shadow on iOS
For some reason the default needs to be turned off.

--- a/src/style.css
+++ b/src/style.css
@@ -236,6 +236,7 @@ html {
   width: 100%;
   padding: var(--spacing-small);
   transition: box-shadow 0.15s ease-in-out;
+  appearance: none;
 }
 
 .form__input-text:focus {
